--- a/FunctionalAnalysis.tex
+++ b/FunctionalAnalysis.tex
@@ -62,6 +62,7 @@
 %\usepackage[12pt]{moresize}
             % A package for using font sizes
 \usepackage{pgfplots}
+\pgfplotsset{width=10cm,compat=newest}
             % PGFPlots draws high-quality function plots in normal or
             % logarithmic scaling with a user-friendly interface
             % directly in TeX.
@@ -71,6 +72,7 @@
 \usepackage{multicol}
 \usepackage{breqn}
 \usepackage{mathrsfs}
+\usepackage{tabularx}
 
 %\usepackage{geometry}
 %\geometry{a4paper, landscape, total={277mm, 190mm}, left=10mm, top=10mm}
@@ -121,6 +123,7 @@
 \renewcommand{\[}{$\\\displaystyle}
 \renewcommand{\]}{\\$}
 \renewcommand{\[}{$\\\displaystyle}
+\newcommand{\ds}{\displaystyle}
 \newcommand{\sigmalgebra}{\textcircled{$\sigma$}}
 \newcommand{\sep}{,\ }
 \newcommand{\tth}[1][]{\textbf{Теорема#1.}}
@@ -1166,7 +1169,51 @@ $\sigmalgebra$ - это сигма-кольцо с единицей
 
 Рассмотрим $f(x)$ измеримую на множестве $A$ и принимающую на этом множестве значения из интервала $[a,b]$. Разобьем интервал $[a,b]$ на частичные промежутки при помощи точек $a=y_0 < y_1 < \dots < y_m = b$. Рассмотрим множество $A_i = \{x \in A: y_{i-1} \leq f(x) < y_i\}$. Все множества $A_i$ измеримы как пересечение двух множеств Лебега функции $f(x)$.
 
-РИСУНОК СЮДА!!!
+\begin{tikzpicture}[>=stealth]
+\begin{axis}[
+  restrict y to domain=-1:5,
+  samples=100, % you don't need 1000, it only slows things down
+  ticks=none,
+  xmin = -1, xmax = 5,
+  ymin = -1, ymax = 6,
+  unbounded coords=jump,
+  axis x line=middle,
+  axis y line=middle,
+  xlabel={$x$},
+  ylabel={$y$},
+  declare function={f(\x)=(\x^3)/16+1;},
+  ]
+  \addplot[thick, blue, domain=1:4] {f(x)};
+
+  \draw[dashed] (axis cs:0,{f(4)}) node[left] {$b$} -|
+                (axis cs:4,0);
+
+  \draw[dashed] (axis cs:0,0.5) node[left] {$a$} -- (axis cs:{f(1)},0.5);
+  \draw[dashed] (axis cs:{f(1)},{f(1)}) -- (axis cs:{f(1)},0);
+
+  \draw[dashed] (axis cs:0,{f(4)}) node[left] {$b$} -|
+                (axis cs:4,0);
+
+  \draw[dashed] (axis cs:0,{f(3.5)}) node[left] {$y_{m-1}$} -|
+                (axis cs:3.5,0);
+
+  \draw[dashed] (axis cs:0,{f(2.75)}) node[left] {$y_i$} -|
+                (axis cs:2.75,0);
+
+  \draw[dashed] (axis cs:0,{f(2.25)}) node[left] {$y_{i-1}$} -|
+                (axis cs:2.25,0);
+
+  \draw[dashed] (axis cs:0,{f(1.5)}) node[left] {$y_1$} -|
+                (axis cs:1.5,0);
+
+  \draw[] (axis cs:{(1+1.5)/2},0) node[below] {$A_1$};
+
+  \draw[] (axis cs:{(2.25+2.75)/2},0) node[below] {$A_i$};
+
+  \draw[] (axis cs:{(3.5+4)/2},0) node[below] {$A_m$};
+
+\end{axis}
+\end{tikzpicture}
 
 $A_i \cap A_j = \emptyset, i \neq j, A=\bigcup_{i=1}^m A_i$
 
@@ -1210,6 +1257,241 @@ $A_i \cap A_j = \emptyset, i \neq j, A=\bigcup_{i=1}^m A_i$
   Справедливо следующие обращение этого свойства функции $f(x)$ интегрируема на множестве $A$, если сходится ряд
   \[\int_A f(x) d \mu =\sum_{k=1}^\infty \int_{A_k} f(x) d \mu\]
 \ee
+
+\subsection {Лекция 11}
+
+\section{Интеграл Лебега по множеству бесконечной меры}
+
+Пусть некоторое множество $X$ не имеет конечной меры такой что $\mu X = + \infty$, однако может быть представлена в виде объединения счетного числа множеств конечной меры, образующих возрастающую последовательность $X= \bigcup_{k=1}^\infty X_k \sep X_k \subset X_{k+1} \sep \mu X_k <+ \infty$
+
+Интеграл Лебега по множеству $X$ бесконечной меры называют число:
+\[\int f(x) d\mu = \lim_{k \rightarrow \infty} \int_{X_k}f(x) d \mu\]
+
+Если этот предел существует и не зависит от выбора последовательности множества $X_n$.
+
+Для интеграла по множеству бесконечной меры остается справедливым все свойства предыдущего пункта с той разницей, что интервал по объединению попарно непересекаемых множеств конечной меры может быть бесконечным (свойство 7).
+
+\section{Сравнение интервалов Лебега и Римана}
+
+Сформируем соответствующую теорему для случая интеграла Лебега по конечному отрезку числовой прямой.
+
+\tth[] Если функция $f(x)$ интегрируема по Риману на отрезке $[a,b]$ и $\int_a^b f(x) dx = I$, то $f(x)$ интегрируема по Лебегу и $\int_{[a,b]} f(x) d \mu = I$
+
+В смысле Римана на числовой прямой интервал от неограниченной функции или интервал по неограниченного промежутка могут существовать только несобственные.
+
+Если отрезок неограниченный:
+\[\int_a^\infty f(x)dx = \lim_{A \rightarrow \infty} \int_a^A f(x) dx\]
+
+Если функция $f(x)$ неогранниченная в точке $a$:
+\[\int_a^b f(X)dx = \lim_{\epsilon \rightarrow +0} \int_{a+\epsilon}^b f(x) dx\]
+
+Несобственные интегралы называют сходящимися, если существует аналогичный интеграл от $|f(x)|$. В противном случае эти интегралы называют условию сходящейся. Оказывается, если несобственный интеграл в смысле Римана сходится абсолютно, то интеграл Лебега от функции $f(x)$ существует и равен несобственному интегралу в смысле Римана от этой функции.
+
+Если же несобственный интеграл по Риману сходится условно, то интеграл по Лебегу не существует. Это связано с тем, что в смысле Лебега $f(x)$ b $|f(x)|$ интегрируемые или не интегрируемые одновременно.
+
+Теория меры Лебега позволяет дать ответ на вопрос в каком случае ограниченная функция является интегрируемой по Риману.
+
+\tth[(критерий интегрирования ограниченной функции по Риману)] Для того, чтобы ограниченная функция определенная на некотором параллелепипеде $R^n$ была интегрируемая по Риману необходимо и достаточно, чтобы мера Лебега множество точки разрыва этой функции равно нулю.
+
+\section{Пространство $L_p[a,b]$ интегрируемых по Лебегу функций и их полнота}
+
+Рассмотрим множество функции $L_p[a,b]$, элементами которого являются функции $f(x)$ интегрируемый по Лебегу в $p$-ой степени по Лебегу на $[a,b]$
+\[\int_a^b |f(x)|^p dx, p \geq 1\]
+
+В дальнейшем используем для обозначения интеграла Лебега обозначим интеграл Римана.
+
+Определим расстояние между двумя функциями:
+\[\rho(f,g)= ( \int_a^b |f(x) - g(x)|^p dx ) ^{\cfrac{1}{p}}\]
+Для выполнения аксиом метрического пространства необходимо считать эквивалентные функции на $[a,b]$ одним $\epsilon$-пространством.
+
+Если $s>p\leq 1$, то $L_s[a,b]< L_p[a,b]$. Сходимость по метрике пространства $L_1[a,b]$ по отрезке $[a,b]$ называется сходимостью в среднем.
+
+Сходимость по метрике пространства $L_2[a,b]$ называют сходимостью в среднем квадрата.
+
+\tth[] пространства $L_p[a,b] \sep p \leq 1$ является конечным сепарабольным метрическим пространством.
+
+Множество непрерывных функций всюду плотно в $L_p[a,b]$. Согласно теореме Вейерштрасса множество многочленов с рациональным коэффициентом всюду плотно в множестве непрерывных функций, а следовательно всюду плотно в $L_p[a,b]$. Множество элементов с рациональными коэффициентами является счетным всюду плотным.
+
+Замечание о сходимости в $L_p[a,b]$:
+\be
+  \item Из сходимости в $L_p[a,b]$ вытекает сходимость в $L_1[a,b]$.
+  \item Из последовательности сходящихся в $L_p[a,b]$ можно извлечь подпоследовательность сходящуюся почти всюду.
+  \item Из сходимости почти всюду не вытекает сходимость в $L_1[a,b]$
+  \textbf{Например}
+  $f_n(x)=\begin{cases} n, & 0 \leq x \leq \cfrac{1}{n} \\ 0, & \cfrac{1}{n} \leq x \leq 1 \end{cases}$
+  \begin{tikzpicture}[>=stealth]
+  \begin{axis}[
+    restrict y to domain=-1:5,
+    samples=100, % you don't need 1000, it only slows things down
+    ticks=none,
+    xmin = -1, xmax = 5,
+    ymin = -1, ymax = 5,
+    unbounded coords=jump,
+    axis x line=middle,
+    axis y line=middle,
+    xlabel={},
+    ylabel={},
+    ]
+    \draw[blue,line width=2pt,] (axis cs:0,3) -- (axis cs:2,3);
+
+    \draw[blue,line width=2pt,] (axis cs:2,0) node[below] {$\cfrac{1}{n}$} --
+                       (axis cs:4,0) node[below] {$1$};
+
+    \draw[dashed] (axis cs:2,3) -- (axis cs:2,0);
+  \end{axis}
+  \end{tikzpicture}
+
+  $f_n(x) \rightarrow 0 \sep x \neq 0$, то есть на отрезке $[0,1] f_n(x) \xrightarrow[]{\text{п. в.}} 0$, однако $\int_0^1 f_n(x) dx = 1$, значит в $\alpha [0,1]$ эта последовательность расходится
+  \item Из равномерной сходимости вытекает сходимость в $L_p[a,b]$
+\ee
+
+\chapter{Нормированные пространства}
+
+\section{Понятия линейного пространства. Линейная зависимость.}
+
+Некоторое множество $L$ называют линейным пространством если для любого его элемента определены операции сложения и умножения на число.
+
+Различают действительные и комплексные пространства, в зависимости от того, какой набор чисел используется.
+
+\subsubsection{Аксиомы линейных пространств}
+
+Операция сложения определяется для любого $x,y \in L$ удовлетворяющих четырем аксиомам.
+
+\be
+  \item Аксиома коммутативности: $x+y = y+x$
+  \item Аксиома ассоциативности: $(x+y)+z = x+(y+z)$
+  \item Аксиома существования нулевого элемента: $\exists 0 \in L: x+0=x \forall x \in L$
+  \item Аксиома существования противоположного элемента: $\forall x \in L \exists -x \in L: x+(-x)=0$
+\ee
+
+Операция умножения на число удовлетворяющих четырем аксиомам.
+\be
+  \item Ассоциативность: $(\alpha \beta) x = \alpha (\beta x) \sep \forall \alpha, \beta \sep \forall x$
+  \item Аксиома умножения на 1 $1\cdot x = x \sep \forall x \in L$
+  \item Дистрибутивность: $\alpha (x+y)=\alpha x + \alpha y \sep (\alpha+\beta)x=\alpha x + \beta x$
+\ee
+
+Система элементов $x_1, \dots, x_n$ называют линейно независимой, если $\sum_{k=1}^n \alpha_k x_k = 0$ при всех $\alpha_k = 0$. В противном случае система называется зависимой если один элемент является линейной комбинацией остальных элементов.
+
+Бесконечной системой элементов линейного пространства называют линейно независимой, если линейно независимая любая ее конечная подсистема.
+
+Говорят, что линейное пространство имеет размерность n ($dim L=n$), если в нем существует система из $n$ линейно независимых элементов, а любая система из $(n+1)$ элементов является линейно зависимой.
+
+Говорят, что линейное пространство является бесконечномерным, если в нем существует линейно независимая система из любого числа элементов.
+
+Линейное многообразие: множество $L'\subset L$ назывется линейным многообразием если оно замкнуто относительно множества операций введенных на $L$, то есть
+\be
+  \item $x+y \in L' \sep \forall x,y \in L'$
+  \item $\alpha x \in L' \sep \forall x \in L' \sep \forall \alpha$ - число.
+\ee
+
+Линейное многообразие само является пространством по отношению к операциям введенным на $L$.
+
+\subsection {Лекция 12}
+
+\section{Нормированные пространства. Сходимость в нормированных пространствах. Банахавы пространства. Ряды в нормированных пространствах.}
+
+Нормированные пространства. Линейное пространство $L$ называется нормированным пространством если для любого $x\in L$ определена числовая функция (функционал) удовлетворяющее следующим аксиомам (обозначается $ \Vert x \Vert $):
+
+\be
+  \item Аксиома неотицательности: $ \Vert x \Vert > 0 \sep \forall x \neq 0 \sep  \Vert x \Vert  = 0 \Leftrightarrow x = 0 $
+  \item Аксиома положительной однородности: $ \Vert \alpha x \Vert = |\alpha| \cdot  \Vert x \Vert \sep \forall x \in L \sep \forall \alpha $
+  \item Аксиома треугольника: $ \Vert x+y \Vert \leq  \Vert x \Vert + \Vert y \Vert  \sep \forall x,y \in L$
+\ee
+
+Из аксиом нормы вытекает неравенство: $| \ \Vert x \Vert  -  \Vert y \Vert \ | \leq \Vert x \pm y \Vert $.
+Действительно $ \Vert x \Vert = \Vert x + y - y \Vert \leq \Vert x + y \Vert + \Vert - y \Vert = \Vert x + y \Vert + \Vert y \Vert $ и $ \Vert y \Vert \leq \Vert x + y \Vert + |x|$.
+
+Любое нормированное пространство является метрическим пространством если ввести на нем метрику согласованную с нормой $ \rho(x,y) = \Vert x - y \Vert$
+
+\begin{tabularx}{\textwidth}{| l | X | X |}\hline
+  МП & Норма & Метрика \\\hline
+  $R_p^n$
+    & $ \ds \Vert x \Vert =\left(\sum_{k=1}^n |x_k|^p\right)^{\cfrac{1}{p}} $
+    & $ \ds \rho(x,y)=\left(\sum_{k=1}^n|x_k-y_k|^p\right)^{\cfrac{1}{p}} $ \\
+  & & $ \ds x=(x_1,\dots,x_n) $ \\
+  $R_\infty^n$
+    & $ \ds \Vert x \Vert =\max_{k=1,\dots,n}|x_k|$
+    & $ \ds \rho(x,y)=\max_{k=1,\dots,n}|x_k-y_k|$ \\
+  $l_p$
+    & $ \ds \Vert x \Vert =\left(\sum_{n=1}^\infty |x_n|p\right)^{\cfrac{1}{p}}$
+    & $ \ds \rho(x,y)=\left(\sum_{n=1}^\infty|x_n-y_n|^p\right)^{\cfrac{1}{p}}$ \\
+  $l_\infty$
+    & $ \ds \Vert x \Vert =\sup_{n=1,2,\dots} |x_n| $
+    & $ \ds \rho(x,y)=\sup_{n=1,2,\dots} |x_n-y_n|$ \\
+  $C[x,b]$
+    & $ \ds \Vert x \Vert =\max_{a \leq t \leq b}|x(t)|$
+    & $ \ds \rho(x,y)=\max_{a \leq t \leq b}|x(t)-y(t)|$ \\
+  $L_\infty[x,b]$
+    & $ \ds \Vert x \Vert =\sup_{a \leq t \leq b}|x(t)|$
+    & $ \ds \rho(x,y)=\sup_{a \leq t \leq b}|x(t)-y(t)|$ \\
+  $L_p[a,b]$
+    & $ \ds \Vert x \Vert =\left(\int_a^b |x(t)|^p dt\right)^{\cfrac{1}{p}}$
+    & $ \ds \rho(x,y)=\left(\int_a^b |x(t)-y(t)|^p dt\right)^{\cfrac{1}{p}}$ \\\hline
+\end{tabularx}
+
+Все факты относительно сходимости в метрических пространствах распространяются на нормированные пространства.
+
+\textbf{Непрерывность алгебраических операций}
+
+Если
+$ \ds x_n \xrightarrow[L]{} x \sep y_n \xrightarrow[L]{} y \sep \alpha_n \xrightarrow[R^1]{} \alpha $
+выполняется, то
+$ \ds x_n+y_n \xrightarrow[L]{} x+y \sep \alpha_n \cdot x_n \xrightarrow[L]{} \alpha x $.
+Действительно
+$ \ds \Vert x_n+y_n-(x+y) \Vert  \leq  \Vert x_n-x \Vert  +  \Vert y_n-y \Vert  \xrightarrow[R^1]{} 0 \sep \Vert \alpha_n x_n - \alpha x \Vert  =  \Vert \alpha_n (x_n - x)+ (\alpha_n - \alpha) x \Vert  \leq |\alpha_n| \cdot  \Vert x_n-x+|\alpha_n-\alpha| \cdot  \Vert x \Vert  \xrightarrow[R^1]{} 0 $.
+
+\textbf{Непрерывность нормы}
+
+Если $x_n \xrightarrow[L]{} x$, то $ \Vert x_n \Vert  \xrightarrow[R^1]{}  \Vert x \Vert $. Действительно $|  \Vert x_n \Vert - \Vert x \Vert  | \leq  \Vert x_n - x \Vert  \rightarrow 0$
+
+\textbf{Ряды в нормированных пространсвах}
+
+Говорят что ряд $\sum_{n=1}^\infty x_n = x$ сходится и сумма равняется $x$, если последовательность частичных сумм ряда сходится элементу $x$.
+\[\lim_{n \rightarrow \infty} \sum_{k=1}^n x_k = x \sep \left \Vert \sum_{k=1}^n x_k - k \right \Vert \rightarrow 0 \sep \sum_{k=1}^n x_k \rightarrow x\]
+
+\textbf{Банаховы пространства}
+
+Полное нормированное пространство называется Банахавым. В первой теме была сформирована теорема о пополнении метрического пространства, эта теорема обобщается на случай нормированных пространств.
+
+\tth[ о пополнении нормированного пространства]. всякое нормированное пространство $L$ может быть включено в Банахово пространства $L^+$ в качестве всюду плотного линейного многообразие $[L]=L^+$.
+
+Подпространством нормированного пространства называется замкнутое линейное многообразие.
+
+\textbf{Абсолютная сходимость рядов в Банахавых пространсвах.}
+
+Рассмотрим ряд составленных из элементов Бонахового пространства $\sum_{n=1}^\infty x_n$.
+Предположим что сходится ряд составленных из нормированных элементов $\sum_{n=1}^\infty  \Vert x_n \Vert  < \infty$.
+В этом случае говорят что ряд составленных из элементов пространства сходится абсолютно.
+
+Докажем что из сходимости ряда $\sum_{n=1}^\infty  \Vert x_n \Vert  < \infty$ вытекает сходимость ряда $\sum_{n=1}^\infty x_n$ и имеет место обобщение неравенства треугольника.
+\[ \left \Vert \sum_{n=1}^\infty x_n \right \Vert \leq \sum_{n=1}^\infty  \Vert x_n \Vert  \]
+
+Докажем что последовательность частичных сумм является фундаментальной. Для определенности $m>n$.
+\[ \left \Vert \sum_{k=1}^m x_k - \sum_{k=1}^n x_k \right \Vert  = \left \Vert \sum_{k=n+1}^m x_k \right \Vert  \leq \sum_{k=n+1}^m  \Vert x_k \Vert  \]
+
+Так как этот ряд сходится, то последовательность его частичных сумм фундаментальная, то есть:
+\[\forall \epsilon > 0 \sep \exists N: \left|\sum_{k=1}^m  \Vert x_k \Vert -\sum_{k=1}^n \Vert x_k \Vert \right| = \sum_{k=n+1}^m  \Vert x_k \Vert < \epsilon \sep \forall n,m, \geq N \]
+
+Следовательно последовательность частичных сумм фундаментальная и в силу полноты пространства она сходится, то есть ряд действительно сходится.
+
+Для доказательства обобщения неравенства треугольника достаточно перейти к пределу при $n \rightarrow \infty$ в неравенстве:
+\[ \left \Vert  \sum_{k=1}^n x_k \right \Vert  \leq \sum_{k=1}  \Vert x_k \Vert \]
+и воспользоваться непрерывностью нормы.
+
+\section{Евклидовы пространства. Характеристическое свойство евкидовых пространств.}
+
+Действительное нормированное пространство называется евклидовым если для любых двух элементов $x$, $y$ определено действительное число $(x,y)$ которое называется скалярным произведением этих элементов и скалярное произведение удовлетворяет следующим аксиомам.
+
+\be
+  \item Аксиома симметрии $(x,y)=(y,x) \sep \forall x,y \in L$
+  \item Аксиома аддитивности $(x + y, z) = (x,z) + (y,z) \sep \forall x,y,z \in L$
+  \item Аксиома однородности $\alpha (x,y) = (\alpha x,y) \sep \forall x,y \in L \sep \forall \alpha $ - действительный
+  \item Аксиома неотицательности $(x,x) > 0 \sep\forall x\neq 0 \sep (x,x)=0 \Leftrightarrow x=0$
+\ee
+
+В евклидовых пространствах норма предполагается согласованной со скалярным произведением $ \Vert x \Vert =\sqrt{(x,x)}$. При таком определении нормы выполняется все аксиомы нормы.
+
 
 %\end{multicols}
 \end{document}
