--- a/FunctionalAnalysis.tex
+++ b/FunctionalAnalysis.tex
@@ -48,6 +48,8 @@
 \titleformat{\subsubsection}
   {\normalfont\large\bfseries\centering}{\thesubsubsection. }{0pt}{}
 
+\pagestyle{myheadings}
+
 \newcolumntype{P}[1]{>{\centering\arraybackslash$} p{#1} <{$}}
 
 \def\arraystretch{1.5}
@@ -907,7 +909,6 @@ $R_1^2,R_2^2,R_\infty^2$.
 \subsection{Применение принципа сжимающих отображений
 к решению интегральных уравнений.}
 
-%??????
 \begin{definition}
   Интегральное уравнение называется
   \textit{интегральным уравнением первого рода},
@@ -923,28 +924,34 @@ $R_1^2,R_2^2,R_\infty^2$.
 Интегральное уравнение Фредгольма второго рода:
 \[ f(x)-\lambda\int_a^bK(x,y)f(y)dy=\phi(x)\]
 
-Здесь $f(x)$ неизвестная функция, $K(x,y)$ - ядро интегрального уравнения.
-Это является известной функцией, которая предполагает ограничения:
-\[ |K(x,y)|\geq M\sep\forall x,y\in[a,b]\]
+Здесь $f(x)$ - неизвестная функция, $K(x,y)$ - ядро интегрального уравнения,
+это является известной функцией, которая предполагает ограничения:
+$|K(x,y)|\leq M\sep\forall x,y\in[a,b]$
 $\phi(x)$ - заданная функция, непрерывная на отрезке $[a,b]$,
-$\lambda$ - параметр.
+$\lambda$ - произвольный параметр.
 
-Если $\phi(x) = 0$, то уравнение называется однородным,
-в противном случае неоднородным.
+\begin{definition}
+  Если $\phi(x) = 0$, то уравнение называется \textit{однородным},
+  в противном случае неоднородным.
+\end{definition}
 
 Рассмотрим отображение $Af(x)$, которое действует на функцию $f$:
 \[ Af(x)=\phi(x)+\lambda\int_a^bK(x,y)f(y)dy\]
 
 \[ A: C[a, b]\to C[a,b]\sep f,\phi \in C[a,b]\]
 
-Выясним при каком условии отображение $A$ будет отображением сжатия. $f_1, f_2 \in C[a,b]$
+Выясним при каком условии отображение $A$ будет отображением сжатия
+ $f_1, f_2 \in C[a,b]$
 
-\[ {\rho(Af_1,Af_2)}={\max_{a\geq x \geq b}|Af_1(x)-Af_2(x)|}=
-\max_{a\geq x \geq b} \left|\lambda\int_a^bK(x, y)\cdot \allowbreak(f_1(y)-f_2(y))dy\right|\leq
-|\lambda|M(b-a)\cdot\allowbreak\max_{a\geq x \geq b}|f_1(x)-f_2(x)|= \allowbreak
+\[ {\rho(Af_1,Af_2)} = {\max_{a \geq x \geq b} | Af_1(x)-Af_2(x) |} =
+\max_{a \geq x \geq b} \left| \lambda\int_a^bK(x, y) \cdot \allowbreak
+(f_1(y)-f_2(y))dy \right| \leq
+|\lambda|M(b-a) \cdot \allowbreak
+\max_{a \geq x \geq b} | f_1(x)-f_2(x) | = \allowbreak
 \underbrace{|\lambda|M(b-a)}_{<1}\rho(f_1,f_2) \]
 
-Интегральное уравнение Фредгольма имеет единственное решение, которое может быть получено методом последовательных приближений.
+Интегральное уравнение Фредгольма имеет единственное решение,
+которое может быть получено методом последовательных приближений.
 
 \[ f_{n+1}(x)=\phi(x)+\lambda\int_a^bK(x,y)f_n(y)dy \sep
 { f_0^{(x)} \in C[a,b]}\]
@@ -953,98 +960,149 @@ $\lambda$ - параметр.
 
 \subsubsection{Нелинейное интегральное уравнение второго рода.}
 
-\[ f(x)-\lambda\int_a^bK(x,y,f(x))dy=\phi(x)\]
+\[f(x)-\lambda\int_a^bK(x,y,f(x))dy=\phi(x)\]
 
-Ядро интегрального уравнения $K(x,y,z)$ удовлетворяет условию Липшеца по своему 'функциональному' аргументу
+Ядро интегрального уравнения $K(x,y,z)$ удовлетворяет условию Липшеца по своему
+``функциональному'' аргументу.
 
-\[{|K(x,y,z_1)-K(x,y,z_2)|}\allowbreak\leq M|z_1-z_2|\sep{\forall z_1,z_2\sep M>0}\]
+\[|K(x,y,z_1)-K(x,y,z_2)| \leq M|z_1-z_2| \sep
+{\forall z_1,z_2\sep M>0}\]
 
 
-$f(x), \phi(x)$ непрерывные функции на отрезке $[a,b]$. Рассмотрим оператор $A:C[a,b]\to C[a,b]$
+$f(x), \phi(x)$ непрерывные функции на отрезке $[a,b]$.
+Рассмотрим оператор $A:C[a,b]\to C[a,b]$
 
 \[ Af(x) = {\phi(x)+\lambda\int_a^bK(x,y,f(y))dy} \]
 
 Выясним в каком случае отображение $A$ будет сжимающим.
 
 \[ {\rho(Af_1, Af_2)} = {\max_{a\leq x\leq b}|Af_1(x)-Af_2(x)|}=
-\max_{a\leq x\leq b}\left|\lambda\int_a^b(K(x,y,f_1(y))-\allowbreak K(x,y,f_2(y)))dy\right|\leq
+\max_{a\leq x\leq b}\left|\lambda\int_a^b(K(x,y,f_1(y))-\allowbreak
+K(x,y,f_2(y)))dy\right|\leq
 \max_{a\leq x\leq b}(|\lambda|(b-a)M|f_1(x)-f_2(x)|)
 = \underbrace{|\lambda|(b-a)M}_{<1}\rho(f_1,f_2) \]
 При достаточно малых $\lambda$ это отображение сжимающие.
 
 \subsubsection{Интегральное уравнение Вольтеры второго рода}
 
-Интегральное уравнение Вольтеры второго рода отличается от интегрального уравнения Фредгольма переменным верхним пределом интегрирования.
+Интегральное уравнение Вольтеры второго рода отличается от интегрального
+уравнения Фредгольма переменным верхним пределом интегрирования.
 
-\[ f(x)-\lambda \int_a^xK(x,y)f(y)dy=\phi(x)\]
+\[f(x)-\lambda\int_a^xK(x,y)f(y)dy=\phi(x)\]
 
-Неизвестная функция $f(x)$ предполагается непрерывной на $[a,b]$, заданная правая часть непрерывна на $[a,b]$, ядро считается ограниченной функцией в квадрате: $|K(x,y)|\leq M\sep\forall x,y\in[a,b]\sep A:C[a,b]\to C[a,b]$.
+Неизвестная функция $f(x)$ предполагается непрерывной на $[a,b]$,
+заданная правая часть непрерывна на $[a,b]$,
+ядро считается ограниченной функцией в квадрате:
+$|K(x,y)|\leq M\sep\forall x,y\in[a,b]\sep A: C[a,b] \to C[a,b]$.
 
 Рассмотрим отображение:
 
-\[ Af(x)=\phi(x)+\lambda\int_a^xK(x,y)f(y)dy \]
+\[Af(x)=\phi(x)+\lambda\int_a^xK(x,y)f(y)dy\]
 
-Покажем что некоторая степень отображения $A$ ($A^n$), является отображением сжатия:
-\[\rho(Af_1,Af_2)=\max_{a\leq x\leq b}\left|\lambda\int_a^xK(a,b)(f_1(y)-f_2(y))dy\right|
-\leq |\lambda|M(x-a)\rho(f_1,f_2)
-\]
+Покажем что некоторая степень отображения $A$ ($A^n$),
+является отображением сжатия:
+\[\rho(Af_1,Af_2)=
+\max_{a\leq x\leq b}\left|\lambda\int_a^xK(a,b)(f_1(y)-f_2(y))dy\right|
+\leq |\lambda|M(x-a)\rho(f_1,f_2)\]
 
-Предположим, что $\rho(A^mf_1,A^mf_2)\leq |\lambda|^m\f{M^m}{m!}(x-a)\rho(f_1,f_2)$
+Предположим, что $\rho(A^mf_1,A^mf_2)\leq
+|\lambda|^m\f{M^m}{m!}(x-a)\rho(f_1,f_2)$
 
 Используя это предположение, оценим
-\[
-{\rho(A^{m+1}f_1,A^{m+1}f_2)}
-=\max_{a\leq x\leq b}\left|\lambda\int_a^xK(x,y)\cdot(A^mf_1(y)-A^mf_2(y))dy\right|
-\leq|\lambda|^{m+1}\f{M^{m+1}}{(m+1)!}\cdot(x-a)^{m+1}\rho(f_1,f_2)
-\]
+\[{\rho(A^{m+1}f_1,A^{m+1}f_2)} = \max_{a\leq x\leq b}\left|\lambda
+\int_a^xK(x,y)\cdot(A^mf_1(y)-A^mf_2(y))dy\right|
+\leq|\lambda|^{m+1}\f{M^{m+1}}{(m+1)!}\cdot(x-a)^{m+1}\rho(f_1,f_2)\]
 
-В силу метода математической индукции справедлива оценка для любого натурального $n$, таким образом для произвольного значения $\lambda$ можно указать такое $m$, что $|\lambda|^m\f{M^m}{m!}(b-a)^m<1$. Таким образом для отображения $A$ существует при любом $\lambda$ такое натуральное значения $m$, при котором $A^m$ является отображением сжатия, тогда можно применить обобщение принципа сжимающего отображения, которое  указывает на существование единственной неподвижной точки оператора $A$, эта неподвижная точка и будет решением интегрального уравнения Вольтера второго рода.
+В силу метода математической индукции справедлива оценка
+для любого натурального $n$,
+таким образом для произвольного значения $\lambda$ можно указать такое $m$,
+что $|\lambda|^m\f{M^m}{m!}(b-a)^m<1$.
+Таким образом для отображения $A$ существует при любом $\lambda$
+такое натуральное значения $m$, при котором $A^m$ является отображением сжатия,
+тогда можно применить обобщение принципа сжимающего отображения,
+которое указывает на существование единственной неподвижной точки оператора $A$,
+эта неподвижная точка и будет решением интегрального
+уравнения Вольтера второго рода.
 
 Для нахождения решения можно применить инерционный процесс.
 
-\textbf{Замечание!} Интегральное уравнение Вольтеры второго рода можно рассматривать как частный случай интегрального уравнения Фредгольма, если доопределить ядро следующим образом $K(x,y)=0,\quad y>x$. Но отображение $A$ является сжимающим только при достаточно малых $\lambda$, а для уравнения Вольтеры мы показали, что $A^m$ является сжимающим отображением при произвольных $\lambda$.
+\textbf{Замечание!} Интегральное уравнение Вольтеры второго рода можно
+рассматривать как частный случай интегрального уравнения Фредгольма,
+если доопределить ядро следующим образом $K(x,y)=0\sep y>x$.
+Но отображение $A$ является сжимающим только при достаточно малых $\lambda$,
+а для уравнения Вольтеры мы показали, что $A^m$ является сжимающим отображением
+при произвольных $\lambda$.
 
 \subsection{Компактность в метрических пространствах}
 
-Из анализа известно теорема Больцано-Вейерштрасса: из любой ограниченной числовой последовательности можно извлечь сходящуюся подпоследовательность. Обобщение этого факта привело к понятию компактности в метрических пространствах.
+Из анализа известно теорема Больцано-Вейерштрасса:
+из любой ограниченной числовой последовательности можно извлечь
+сходящуюся подпоследовательность.
+Обобщение этого факта привело к понятию компактности
+в метрических пространствах.
 
-Рассмотрим некоторое множество $M\subset X$
+Рассмотрим некоторое множество $M \subset X$.
 
-Множество называется предкомпактным, если из любой последовательности его элементов ${x_n}\subset M$ можно извлечь сходящуюся подпоследовательность $x_{n_k}\to x\in X$
+\begin{definition}
+  Множество называется \textit{предкомпактным},
+  если из любой последовательности его элементов ${x_n} \subset M$
+  можно извлечь сходящуюся подпоследовательность $x_{n_k} \to x \in X$.
+\end{definition}
 
-Точка $x$ может принадлежать множеству M, а может и не принадлежать ему.
+Точка $x$ может принадлежать множеству $M$, а может и не принадлежать ему.
 
-Множество $М$ называется компактным если пределы всех указных подпоследовательностей принадлежат этому множеству.
+\begin{definition}
+  Множество $M$ называется \textit{компактным} если пределы всех указных
+  подпоследовательностей принадлежат этому множеству.
+\end{definition}
 
-Множество является компактным тогда и только тогда когда оно предкомпактно и замкнуто. Метрическое пространство $X$ называется компактным если из любой последовательности его элементов можно извлечь сходящуюся подпоследовательность.
+Множество является компактным тогда и только тогда когда оно
+предкомпактно и замкнуто.
+Метрическое пространство $X$ называется компактным если из любой
+последовательности его элементов можно извлечь сходящуюся подпоследовательность.
 
 Компактное метрическое пространство всегда является полным.
 
-Числовая ось ($R^1$) не является компактным пространством.
+Числовая ось ($R^1$) не является компактным пространством. %???
 
-Метрическое пространство ($[a,b]$) является компактным пространством.
+%Метрическое пространство ($[a,b]$) является компактным пространством. %???
 
-Оказывается что в $n$-мерном арифметическом ($R_p^n$) пространстве предкомпактность эквивалентно его ограниченности, так как сходимость в этом пространстве является по координатной сходимостью.
+%??????
+Оказывается что в $n$-мерном арифметическом ($R_p^n$) пространстве
+предкомпактность эквивалентно его ограниченности,
+так как сходимость в этом пространстве является по координатной сходимостью.
 
-\tth[] Любое ограниченное множество $M\subset R_p^n$ предкомпактно, а ограниченное замкнутое множество компактно
+\begin{theorem}
+  Любое ограниченное множество $M \subset R_p^n$ предкомпактно,
+  а ограниченное замкнутое множество компактно.
+\end{theorem}
 
-\btev[] Пусть $M$ ограниченное множество. Рассмотрим последовательность его элементов: $x^k=(x_1^k,\dots,x_n^k)\in M$.
-Числовая последовательность $x_1^k$ ограниченная, поэтому из нее можно извлечь сходящуюся подпоследовательность $x_1^k$, которая сходится к некоторой точке $x_1^0$.
-Рассмотрим $x_2^k$ из нее можно извлечь сходящуюся подпоследовательность $x_2^k$, которая сходится к некоторой точке $x_2^0$, а из последовательности $x_1^{k_2}$ можно извлечь $x_1^{k_2}\to x_1^0$. Продолжая этот процесс получим последовательности координат $x_i^{k_n}\to x_i^0$.
+\begin{proof}
+  Пусть $M$ ограниченное множество.
+  Рассмотрим последовательность его элементов: $x^k=(x_1^k,\dots,x_n^k)\in M$.
+  Числовая последовательность $x_1^k$ ограниченная,
+  поэтому из нее можно извлечь сходящуюся подпоследовательность $x_1^k$,
+  которая сходится к некоторой точке $x_1^0$.
+  Рассмотрим $x_2^k$ из нее можно извлечь сходящуюся подпоследовательность
+  $x_2^k$, которая сходится к некоторой точке $x_2^0$,
+  а из последовательности $x_1^{k_2}$ можно извлечь $x_1^{k_2}\to x_1^0$.
+  Продолжая этот процесс получим последовательности координат
+  $x_i^{k_n}\to x_i^0$.
 
-Рассмотренный метод доказательства называется диагональным процессом.
-\begin{dgroup*}
-\[ x_1^{k_1} \to x_1^0\]
-\[\begin{matrix}
-x_1^{k_2} \to x_1^0 & \dots & x_1^{k_n} \to x_1^0 \\
-x_2^{k_2} \to x_2^0 & \dots & x_2^{k_n} \to x_2^0 \\
-\dots\\
-& & x_n^{k_n} \to x_n^0 \\
-\end{matrix}\]
-\[x^{k_n}=(x_1^{k_n},\dots,x_n^{k_n})\sep x^{k_n}\to x^0 \in R_p^n\]
-\end{dgroup*}
+  Рассмотренный метод доказательства называется диагональным процессом.
+  \begin{dgroup*}
+  \[ x_1^{k_1} \to x_1^0\]
+  \[\begin{matrix}
+  x_1^{k_2} \to x_1^0 & \dots & x_1^{k_n} \to x_1^0 \\
+  x_2^{k_2} \to x_2^0 & \dots & x_2^{k_n} \to x_2^0 \\
+  \dots\\
+  & & x_n^{k_n} \to x_n^0 \\
+  \end{matrix}\]
+  \[x^{k_n}=(x_1^{k_n},\dots,x_n^{k_n})\sep x^{k_n}\to x^0 \in R_p^n\]
+  \end{dgroup*}
 
-Так как сходимость в $R_n^p$ означает по координатную сходимость.
+  Так как сходимость в $R_n^p$ означает по координатную сходимость.
+\end{proof}
 
 \subsubsection{Эквивалентная терминология для описания компактности множества}
 
@@ -1159,7 +1217,7 @@ M=\{x(t)\in C[a,b]: |x(t_1)-x(t_2)|\leq K|t_1-t_2|^\alpha \quad 0 < \alpha \leq 
 Рассмотрим параллелепипеды с произвольным включением граней ($x_i<x_i<b_i$).
 
 Мера Лебега параллелепипеда считается равным его объему:
-\[m\Pi = \Pi{i=1}^n(b_i-a_i)\]
+\[m\Pi = \Pi_{i=1}^n(b_i-a_i)\]
 Введенная таким образом мера обладает свойством неотрицательности.
 
 На \textbf{втором этапе} мера Лебега определяется для элементарных множеств. Элементарным множеством, называется объединение конечного числа конечного числа параллелепипедов, то есть
